# sarn-compiler

./: .gitignore  CMakeLists.txt  FAQ.md  GETTING_STARTED.md  PATTERNS.md  README.md  TROUBLESHOOTING.md  build-standalone.ps1  cmake_configure.bat  docs.md  installer.sarn  packageReg.json  sarn.ps1  slua.ps1  test_const.slua  test_mine.slua  test_nonstrict.slua  test_undef.slua
.packages/cMath/: __init__.slua  native.c  pkg.json
.packages/mathimath/: __init__.slua  pkg.json
compiler/: CMakeLists.txt
compiler/include/slua/: AST.h  Diagnostics.h  IREmitter.h  Lexer.h  Parser.h  Resolver.h  SemanticConfig.h  TypeChecker.h
compiler/src/codegen/: IREmitter.cpp
compiler/src/driver/: main.cpp
compiler/src/lexer/: Lexer.cpp
compiler/src/parser/: Parser.cpp
compiler/src/sema/: Diagnostics.cpp  Resolver.cpp  SemanticConfig.cpp  TypeChecker.cpp
examples/: String.slua  demo_3d.slua  demo_crypto.slua  enum.slua  generics_example.slua  hello_nonstrict.slua  hello_strict.slua  io_test.slua  math_test.slua  memory_example.slua  stdlib_demo.slua  stdlib_test.slua  test_arity.slua  test_mine.slua  test_nonstrict.slua  tryaPackages.slua  trya_fonts.slua  utils.slua
examples/Real_Implementation/cryptoApp/: coin.slua  main.slua
examples/advanced/: casting.slua  defer_order.slua  enums.slua  error_handling.slua  memory.slua  multiple_returns.slua  oop.slua  packages.slua  pointers.slua  records.slua  recursion.slua  union_types.slua
examples/basics/: control_flow.slua  defer.slua  functions.slua  logic.slua  loop_control.slua  loops.slua  multiple_return.slua  operators.slua  scoping.slua  strings.slua  tables.slua  types.slua  variables.slua
examples/cryptoApp/: coin.slua  fetcher.slua  main.slua  ui.slua
examples/graphics/: demo_3d.slua  fonts.slua  ui_demo.slua
examples/stdlib/: crypto.slua  fs_path.slua  io.slua  json.slua  math.slua  os.slua  random_datetime.slua  reflection.slua  string.slua  table_ops.slua
runtime/: CMakeLists.txt
runtime/include/: slua_runtime.h
runtime/src/: slua_runtime.c  slua_table.c
stdlib/: io.slua  math.slua  slua_raylib.c  slua_registry.h  slua_stdlib.c  slua_stdlib.h  string.slua
stdlib/modules/: slua_buf.c  slua_buf.h  slua_crypto.c  slua_crypto.h  slua_datetime.c  slua_datetime.h  slua_fs.c  slua_fs.h  slua_http.c  slua_http.h  slua_json.c  slua_json.h  slua_net.c  slua_net.h  slua_path.c  slua_path.h  slua_process.c  slua_process.h  slua_random.c  slua_random.h  slua_regex.cpp  slua_regex.h  slua_registry.c  slua_sync.c  slua_sync.h  slua_tbl_extra.c  slua_tbl_extra.h  slua_thread.c  slua_thread.h  slua_vec.c  slua_vec.h
tests/: CMakeLists.txt
tests/nonstrict/: null_propagation.slua
tests/strict/: hello.slua
tools/extensions/vscode/: extension.js  install.ps1  package.json  slua-extension-0.2.0.vsix  slua-extension-0.4.0.vsix  slua-extension-0.5.0.vsix  slua-language-0.3.0.vsix  slua-language.vsix
tools/extensions/vscode/icon-theme/: Slua-icons.json
tools/lsp/slua-lsp/: main.cpp
