cmake_minimum_required(VERSION 3.20)
project(slua VERSION 0.3 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

find_package(LLVM CONFIG QUIET)
if(LLVM_FOUND)
    message(STATUS "LLVM ${LLVM_PACKAGE_VERSION} found")
    include_directories(${LLVM_INCLUDE_DIRS})
    add_definitions(${LLVM_DEFINITIONS})
    set(SLUA_HAS_LLVM TRUE)
else()
    message(STATUS "LLVM not found - building without codegen")
    set(SLUA_HAS_LLVM FALSE)
endif()

add_subdirectory(runtime)
add_subdirectory(compiler)
#enable_testing()
#add_subdirectory(tests)